--- a/گوېټه.mw
+++ b/گوېټه.mw
@@ -30,11 +30,7 @@ Goethe's influence spread across Europe, and for the next century his works were
 د ګوېټه پلار، یوهان کسپر ګوېټه[[۱۷۱۰]]-[[۱۷۸۲]] له خپلې کورنۍ سره د فرانکفورټ په ښکار کې یو ستر کور کې اوسېده، چې په هغه پیر کې د روم د امپراتورۍ یوه برخه وه. د ګوېټه مو هم کترینا الیزابت ګوېټه د فرانکفورټ له نامتو کورنیو څخه وه.
 یوهان ولفګنګ د خپل پلار او ځنګړې ښوونکي په څنګ کې ډېر  زیات مالومات ترلاسه کړل، لاتیني، یوناني، فرانسوي، انګرېزي او عبري ژبې یې زده کړې.
 دې د [[۱۷۶۵]]-[[۱۷۶۸]] ترمنځ د [[لایپزیې]] ښار کې په د حقوقو په زده کړه بوخت شو، او هوری یې د [[کریسټین فورشتګوت ګلرټ]] له شعرونو سره مینه پیدا شوه. له ۱۷۶۸ز کال څخه وروسته خپل پلرني ښار ته راوګرځېد او یو څه موده په [[دارمشتات]] کې وو.
-[[Image:Goethehaus-ffm011.jpg|thumb|upright|right|Goethe's birthplace in Frankfurt, Germany (Grosser Hirschgraben)]]
-Goethe's father, Johann Caspar Goethe ([[Frankfurt am Main]], [[Hessen]], 29 July 1710{{ndash}} Frankfurt, 25 May 1782), lived with his family in a large house in Frankfurt, then an [[Imperial Free City]] of the [[Holy Roman Empire]]. <!--Though he had studied law in Leipzig and had been appointed Imperial Councillor, as a wealthy member of the [[bourgeoisie]], he spent most of his time collecting stuffed animals and paintings.--> Goethe's mother, Catharina Elisabeth Textor (Frankfurt, 19 February 1731{{ndash}} Frankfurt, 15 September 1808), the daughter of the Mayor of Frankfurt Johann Wolfgang Textor (Frankfurt, 11 December 1693{{ndash}} Frankfurt, 6 February 1771) and wife (married at [[Wetzlar]], 2 February 1726) Anna Margaretha Lindheimer (Wetzlar, 23 July 1711{{ndash}} Frankfurt, 18 April 1783, a descendant of [[Lucas Cranach the Elder]] and Henry III, Landgrave of Hesse-Marburg), married 38-year-old Johann Caspar when she was only 17 at Frankfurt on 20 August 1748. All their children, except for Goethe and his sister, Cornelia Friederike Christiana, who was born in 1750, died at an early age.
-
-Johann Caspar and private tutors gave Goethe lessons in all the common subjects of that time, especially languages ([[Latin]], Greek, French and English). Goethe also received lessons in [[dancing]], [[equestrianism|riding]] and [[fencing (sport)|fencing]]. Johann Caspar was the type of father who, feeling frustrated in his own ambitions by what he saw as a deficiency of educational advantages, was determined that his children would have all those advantages which he had not had.
-Goethe had a persistent dislike of the [[Roman Catholic Church|church]], characterizing its history as a "hotchpotch of mistakes and violence" (''Mischmasch von Irrtum und Gewalt''). His great passion was [[drawing]]. Goethe quickly became interested in [[literature]]; [[Friedrich Gottlieb Klopstock]] and [[Homer]] were among his early favourites. He had a lively devotion to [[theatre]] as well and was greatly fascinated by [[puppet]] shows that were annually arranged in his home; a familiar theme in ''[[Wilhelm Meister's Apprenticeship]]''.
+[[Image:Goethehaus-ffm011.jpg|thumb|upright|right|په فرانفورټ کې د ګوېټه زېږنځای, المان (Grosser Hirschgraben)]]
 
 == Legal career ==
 Goethe studied [[law]] in [[Leipzig]] from 1765 to 1768. Learning age-old judicial rules by heart was something he strongly detested. He preferred to attend the poetry lessons of [[Christian Fürchtegott Gellert]]. In Leipzig, Goethe fell in love with Käthchen Schönkopf and wrote cheerful verses about her in the [[Rococo]] genre. In 1770, he anonymously released ''Annette'', his first collection of poems. His uncritical admiration for many contemporary poets vanished as he became interested in [[Gotthold Ephraim Lessing|Lessing]] and [[Christoph Martin Wieland|Wieland]]. Already at this time, Goethe wrote a good deal, but he threw away nearly all of these works, except for the comedy ''Die Mitschuldigen''. The restaurant [[Auerbachs Keller]] and its legend of [[Johann Georg Faust|Faust's]] 1525 barrel ride impressed him so much that Auerbachs Keller became the only real place in his [[closet drama]] ''[[Faust Part One]]''. Because his studies did not progress, Goethe was forced to return to Frankfurt at the close of August 1768.
