*Empty MediaWiki Message*

--- a/اقبال_او_گوېټه.mw
+++ b/اقبال_او_گوېټه.mw
@@ -3,3 +3,4 @@
 
 د المان (جرمني) ستر پوه-اندی، شاعر او فیلسوف د فرانکفورټ په مشهور ښار کې زېږېدلې دی. دې د ۸۳ کالو د اوږده عمر ښاوند وو. د علامه اقبال له پیداېښت څخه ۴۵ کاله وړاندې په ۱۸۳۲ز کال ومړ. 
 ګوېټه د قانون له زده کړې وروسته نوکري پیل کړه، او پدې د خپل کار په دوران کې د وایي مار علم دوسته ډېوک کارل ارګست سره یې لیده کاته وشوه، دډېوک کارل ګوېټ خپل کور ته وباله، چې هغه هم دا بلنه ومنله. ګوېټّ تر مرګه هورې (په وای مار) کې پاتې شو او هملته خاور ته وسپارل شو.
+دې په وایي مار کې په مختلفو دندو وګومارل شوو دېوک د زړه له تله دده قدر وکړ. ګوېټه پدې ښار کې دومره
