--- a/غوث_خيبري.mw
+++ b/غوث_خيبري.mw
@@ -6,7 +6,20 @@
 == دندې ==
 لومړنۍ رسمي دولتي دنده يې په ۱۳۳۸ ل. کال کې په افغانستان کې پيل کړه او په همدې کال کې د کابل راډيو د پښتون غږ د راډيويي مجلې د مدير په توګه يې دنده سر ته رسولې. په هغه مهال د کابل راډيو نوم په افغانستان راډيو نه ؤ اړول شوی او د پښتون غږ مجله د کابل راډيو يو خپرندويه اورګان ؤ.
 
-بيا په 
+ښاغلی خيبري نيژدې اوه کاله په هند کې د آل انډيا راډيو د پښتو خپرونې وياند او د تاريخي ادبي مقالو ليکوال پاتې شوی. په دولتي چارو کې يې د لومړۍ رتبې نه پورته د مافوق رتبې او خارج رتبې پورې په لوړو دندو، له کورناستۍ (تقاعد) پرته خپلې چارې پرمخ بېولي دي. د هغه په نورو رسمي دندو کې د اطلاعاتو او کلتور د وزارت د پښتو د پراختيا د رياست د مرستيالۍ دنده، د ننګرهار ولايت د اطلاعاتو او کلتور د آمر او د ننګرهار د ورځپاڼې مسؤل مدير، د کندهار د اطلاعاتو او کلتور د آمر او د طلوع افغان د ورځپاڼې مسؤل مدير، د جمهوريت د ورځپاڼې د تدقيق مدير او د پښتو سرمقالو او فيچرونو ليکوال، د افغانستان په راډيو کې د پښتونستان د اووه ساعته خپرونې د چلولو مسؤل، همدا رنګه د راډيو افغانستان د پښتونستان د خپرونې، د دې خپرونې د تاريخي، سياسي مقالو د ليکلو او خپرولو مسؤليت او دنده يې هم سر ته رسولې. 
+
+== د ليکوالۍ ژوند ==
+
+
+=== چاپ شوي آثار ===
+
+
+=== ناچاپه آثار ===
+
+
+== باندنۍ تړنې ==
+
+
 
 [[وېشنيزه: پښتانه ليکوال]]
 [[وېشنيزه: پښتانه شاعران]]
