--- a/غوث_خيبري.mw
+++ b/غوث_خيبري.mw
@@ -1,7 +1,9 @@
 '''غوث خيبري''' يو افغان ليکوال دی. نوموړی د پاينده ګل خان زوی او د شيخ عبدالرحمن لمسی دی چې په ۱۳۱۲ ل. هـ کال کې د ننګرهار ولايت د کامې د ولسوالۍ د سنګر سرای په کلي کې زېږېدلی دی. 
 
+== مخينه ==
+سنوموړی د ډاکټر نجيب الله د واکمنۍ په وروستيو کالونو کې له افغانستان نه وتلی او د نورو افغاني کډوالو پشان کډوال شوی دی چې دم مهال هم د جرمني په هېواد کې د کډوالۍ شپې او ورځې سبا کوي. 
 == زده کړې ==
-هغه خپلې لومړنۍ زده کړې د خپل ټاټوبي په لومړني ښوونځي کې کړي او منځوۍ زده کړې يې په کابل کې تر ۱۲ ټولګي سر ته رسولي. بيا د لوړو زده کړو لپاره هند ته تللی او هلته يې د ډهلي پوهنتون کې د هنرونو په څانګه کې خپل د لېسانس بريليک لاس ته راوړی. 
+هغه خپلې لومړنۍ زده کړې د خپل ټاټوبي په لومړني ښوونځي کې کړي او منځوۍ زده کړې يې په کابل کې تر ۱۲ ټولګي سر ته رسولي. بيا د لوړو زده کړو لپاره هند ته تللی او هلته يې د ډهلي پوهنتون کې د هنرونو په څانګه کې خپل د لېسانس بريليک لاس ته راوړی.
 
 == دندې ==
 لومړنۍ رسمي دولتي دنده يې په ۱۳۳۸ ل. کال کې په افغانستان کې پيل کړه او په همدې کال کې د کابل راډيو د پښتون غږ د راډيويي مجلې د مدير په توګه يې دنده سر ته رسولې. په هغه مهال د کابل راډيو نوم په افغانستان راډيو نه ؤ اړول شوی او د پښتون غږ مجله د کابل راډيو يو خپرندويه اورګان ؤ.
