*Empty MediaWiki Message*

--- a/غوث_خيبري.mw
+++ b/غوث_خيبري.mw
@@ -1,7 +1,8 @@
-'''غوث خيبري''' يو افغان ليکوال دی. نوموړی د پاينده ګل خان زوی او د شيخ عبدالرحمن لمسی دی چې په ۱۳۱۲ ل. هـ کال کې د ننګرهار ولايت د کامې د ولسوالۍ د سنګر سرای په کلي کې زېږېدلی دی. 
+'''غوث خيبري''' يو افغان ليکوال او د [[راډيو افغانستان]] د [[پښتونستان]] د خپرونې پخوانی او د [[هند]] [[د آل انډيا راډيو]] د پښتو خپرونې پخوانی وياند دی. د نوموړي د کيسو ګڼ شمېر کتابونه چاپ شوي همداراز د نوموړي د مستندو تاریخي کيسو هم يو شمېر کتابونه چاپ شوي. 
 
 == مخينه ==
-سنوموړی د ډاکټر نجيب الله د واکمنۍ په وروستيو کالونو کې له افغانستان نه وتلی او د نورو افغاني کډوالو پشان کډوال شوی دی چې دم مهال هم د جرمني په هېواد کې د کډوالۍ شپې او ورځې سبا کوي. 
+نوموړی د پاينده ګل خان زوی او د شيخ عبدالرحمن لمسی دی چې په ۱۳۱۲ ل. هـ کال کې د ننګرهار ولايت د کامې د ولسوالۍ د سنګر سرای په کلي کې زېږېدلی دی. 
+نوموړی د ډاکټر نجيب الله د واکمنۍ په وروستيو کالونو کې له افغانستان نه وتلی او د نورو افغاني کډوالو پشان کډوال شوی دی چې دم مهال هم د جرمني په هېواد کې د کډوالۍ شپې او ورځې سبا کوي. 
 == زده کړې ==
 هغه خپلې لومړنۍ زده کړې د خپل ټاټوبي په لومړني ښوونځي کې کړي او منځوۍ زده کړې يې په کابل کې تر ۱۲ ټولګي سر ته رسولي. بيا د لوړو زده کړو لپاره هند ته تللی او هلته يې د ډهلي پوهنتون کې د هنرونو په څانګه کې خپل د لېسانس بريليک لاس ته راوړی.
 
