--- a/غوث_خيبري.mw
+++ b/غوث_خيبري.mw
@@ -1,4 +1,4 @@
-'''غوث خيبري''' يو افغان ليکوال او د [[راډيو افغانستان]] د [[پښتونستان]] د خپرونې او د [[هند]] [[د آل انډيا راډيو]] د پښتو خپرونې پخوانی وياند دی. د نوموړي د کيسو ګڼ شمېر کتابونه چاپ شوي همداراز د نوموړي د مستندو تاریخي کيسو هم يو شمېر کتابونه چاپ شوي. 
+'''غوث خيبري''' يو افغان ليکوال او د [[راډيو افغانستان]] د [[پښتونستان]] د خپرونې او د [[هند]] [[د آل انډيا راډيو]] د پښتو خپرونې پخوانی وياند دی. هغه د کيسو ګڼ شمېر کتابونه ليکلي او همداراز يې د مستندو تاریخي کيسو هم يو شمېر کتابونه چاپ شوي. 
 
 == مخينه ==
 نوموړی د پاينده ګل خان زوی او د شيخ عبدالرحمن لمسی دی چې په ۱۳۱۲ ل. هـ کال کې د ننګرهار ولايت د کامې د ولسوالۍ د سنګر سرای په کلي کې زېږېدلی دی. 
