/* چاپ شوي آثار */

--- a/غوث_خيبري.mw
+++ b/غوث_خيبري.mw
@@ -15,7 +15,26 @@
 
 
 === چاپ شوي آثار ===
-
+#لکه های خون - د تاريخي لنډو کيسو ټولګه (د استعمار په ضد د پښتنو مبارزې)
+#طوفانها - تاريخي ناول (د استعمار په ضد د پښتنو مبارزې) - چاپکال ۱۳۴۰ هـ. ل
+#تفنګداران خيبر - تاريخي ناول (د انګرېزانو پر ضد د پښتنو مبارزې)
+#ديوانه - عشقي ټولنيز ناول
+#د اور لمبې - تاريخي ناول
+#ابدالي توره - تاريخي ناول (په هند کې د ستر احمد شاه بابا د جګړو يوه ګوښه)
+#اراکوزۍ پېغله او مقدوني سکندر - تاريخي ناول (د سکندر سره د يوې پښتنې اتلې جګړه)
+#هغه وژړل - د تاريخي لنډو کيسو ټولګه
+#پردېس - د کډوالو د ژوند يو انځور (د لنډو کيسو ټولګه)
+#د کندهار ناوې - تاريخي ناول (د انګرېزي ښکېلاک په ضد د يوې پښتنې جګړه)
+#د ګوګا منډه لېوان - د لنډو کيسو ټولګه
+#پاکه وينه - تاريخي ناول (په هند کې د لودي پښتنو په اړه دی)
+#قهرمان ميميرد - تاريخي ناول (د برتانيوي ښکېلاک په ضد د پښتنو مبارزه)
+#د مرګ سندره - تاريخي ناول (د برتانيوي ښکېلاک په ضد د پښتنو مبارزه)
+#لوی افغان شېرشاه سوري - تاريخي څېړنيز اثر
+#د تيراه جګړه - تاريخي څېړنيز اثر (د انګرېزانو سره د پښتنو جګړې)
+#سياسي دايرةالمعارف (پوهنغونډ) - ژباړه
+#
+#
+#
 
 === ناچاپه آثار ===
 
