--- a/غوث_خيبري.mw
+++ b/غوث_خيبري.mw
@@ -32,9 +32,11 @@
 #لوی افغان شېرشاه سوري - تاريخي څېړنيز اثر
 #د تيراه جګړه - تاريخي څېړنيز اثر (د انګرېزانو سره د پښتنو جګړې)
 #سياسي دايرةالمعارف (پوهنغونډ) - ژباړه
-#
-#
-#
+#نوميالي افغانان يا د هند په تاریخ او مدنيت کې د افغانانو برخه - تاريخي څېړنيز اثر
+#په افغانستان کې توپان - تاريخي سياسي څېړنيز اثر (په افغانستان کې د سياسي تاريخي پېښو بهير)
+#پښتانه د کلتوري ښکېلاک په زنځيرونو کې - تاريخي سياسي څېړنيز اثر
+#پښتانه د برهما، زردښت، بودا او اسلام په پېرونو کې - پوهنيز سياسي اثر
+#پښتانه د افغانستان په افسانوي داستاني تاريخ کې - تاريخي سياسي څېړنيز اثر
 
 === ناچاپه آثار ===
 
