--- a/غوث_خيبري.mw
+++ b/غوث_خيبري.mw
@@ -43,6 +43,11 @@
 #د هند يادښتونه - تاريخي، سياسي، ټولنيز او څېړنيز اثر
 #د آزادۍ سندره - د ادبي ټوټو ژباړه
 
+== لاسته راوړنې ==
+
+
+== سفرونه ==
+
 == باندنۍ تړنې ==
 
 
