--- a/غوث_خيبري.mw
+++ b/غوث_خيبري.mw
@@ -2,7 +2,10 @@
 
 == مخينه ==
 نوموړی د پاينده ګل خان زوی او د شيخ عبدالرحمن لمسی دی چې په ۱۳۱۲ ل. هـ کال کې د ننګرهار ولايت د کامې د ولسوالۍ د سنګر سرای په کلي کې زېږېدلی دی. 
-نوموړی د ډاکټر نجيب الله د واکمنۍ په وروستيو کالونو کې له افغانستان نه وتلی او د نورو افغاني کډوالو پشان کډوال شوی دی چې دم مهال هم د جرمني په هېواد کې د کډوالۍ شپې او ورځې سبا کوي. 
+نوموړی د ډاکټر نجيب الله د واکمنۍ په وروستيو کالونو کې له افغانستان نه وتلی او د نورو افغاني کډوالو پشان کډوال شوی دی چې دم مهال هم د جرمني په هېواد کې د کډوالۍ شپې او ورځې سبا کوي.
+
+=== ځانګړي وړتوبونه ===
+
 == زده کړې ==
 هغه خپلې لومړنۍ زده کړې د خپل ټاټوبي په لومړني ښوونځي کې کړي او منځوۍ زده کړې يې په کابل کې تر ۱۲ ټولګي سر ته رسولي. بيا د لوړو زده کړو لپاره هند ته تللی او هلته يې د ډهلي پوهنتون کې د هنرونو په څانګه کې خپل د لېسانس بريليک لاس ته راوړی.
 
