--- a/غوث_خيبري.mw
+++ b/غوث_خيبري.mw
@@ -2,7 +2,7 @@
 
 == مخينه ==
 نوموړی د پاينده ګل خان زوی او د شيخ عبدالرحمن لمسی دی چې په ۱۳۱۲ ل. هـ کال کې د ننګرهار ولايت د کامې د ولسوالۍ د سنګر سرای په کلي کې زېږېدلی دی. 
-نوموړی د ډاکټر نجيب الله د واکمنۍ په وروستيو کالونو کې له افغانستان نه وتلی او د نورو افغاني کډوالو پشان کډوال شوی دی چې دم مهال هم د جرمني په هېواد کې د کډوالۍ شپې او ورځې سبا کوي.
+نوموړی د ډاکټر نجيب الله د واکمنۍ په وروستيو کالونو کې له افغانستان نه وتلی او د نورو افغاني کډوالو پشان کډوال شوی دی چې دم مهال د جرمني په هېواد کې د کډوالۍ شپې او ورځې سبا کوي.
 
 === ځانګړي وړتوبونه ===
 
