*Empty MediaWiki Message*

--- a/محمد_شفيق_حقپال.mw
+++ b/محمد_شفيق_حقپال.mw
@@ -1,5 +1,5 @@
 [[Image:Haqpal.PNG|thumb|289px|محمد شفيق حقپال]]
-ښاغلی محمد شفيق حقپال ( وردګ) دمحمد يونس زوى په لمريزهجري ١٣٤٤ كې دميدان وردګو ولايت دنرخ ولسوالۍ دكريمدادودقريې دمارخانې په كلي كې زيږيدلى .
+محمد شفيق حقپال (وردګ) دمحمد يونس زوى په لمريزهجري ١٣٤٤ كې دميدان وردګو ولايت دنرخ ولسوالۍ دكريمدادودقريې دمارخانې په كلي كې زيږيدلى .
 
 == زده كړي ==
 لومړنۍ اومنځنۍ زده كړي يې دكابل په سپين كلي ليسه كې نورى زده كړى يې دكابل د برېښنا د تخنيک په څانګه كې پاى ته رسولي دي .
@@ -13,9 +13,7 @@
 
 == چاپ شوي اثار ==
 
-دهيلو غوټۍ               شعري ټولګه 
-
- 
+#د هيلو غوټۍ - شعري ټولګه 
 
 == دشعر بېلګي ==
 
@@ -64,114 +62,7 @@
 
 ځكه اوسي په مســــــــــــــكن دميړنو کي
 
- 
-
- 
-
-دپســــــــــــرلي وږمـــــــــــې
-
- 
-
- 
-
-وږمودپسرلونه جوړې  جوړې ترانې شــــــــــــــــــوې
-څپې دتازه هيلو په هر لور خورې ورې شـــــــــــــــوې
 
 
-ګل پاڼې اوشبنم يې دګامونونه جــــــــــــــــــــار  وزي
-هرځل چې دجانان مې په چمن كى ننــــــدارې شوې
-
-
-كوڅه كى يى روانى جنـــــازى درقـــــــــــــــــــــــــــــــــيبانو
-يارماسره پخلاشوترې چاودلې يې زارې شــــــــــوې
-
-
-استازى دوصــــــــال اوس رانه غواړي زيري زيري
-ماهرڅه يارنه ځاركړل اوس مې سختې ګزارې شوې
-
-
-نقاش دطبيعت كړله وړيادا انځــــــــــــــــــــــــــــــورونه 
-ترې ډكې له حسنونواوخوندونوكنـــــــــــارې شـــوې
-
-
-(حقــــــــــــــــــــــپاله) نذرانه كړه په بدل كي روح اوځان
-ادايې كله كله دنعــــــــــــــــــــــــــــــــــــــمت ديوزرې شوې
-
- 
-
- 
-
- 
-
-
-دوطن مينه
-
-
-
-وطنـــــــــــــــــــــــــه مينه كي ستا پايم ترابده
-
-غورځــــــــــــــنګونه ستاله مينى تل په وده
-
- 
-
-جاردې له دښتو جګوغـــرواوسردروشم
-
-جاردې له لــــــــــــوړى له ژورى جذرومده
-
- 
-
-كه ددنيا زرو لعـــــــــلونه الماس ټول شى
-
-هغه ټوټه ديوه كاڼي ستـــــــــــــاترې ښه ده
-
- 
-
-ډيرئ ډيرئ غنــــــــچې ګلان دچالــه لاسه
-
-برابر كله يواغزىْ داستـــــــــــــــــــــــاله يده
-
- 
-
-قبول داستاسپيره ډاګونه په ليــــمودي
-
-دزړه په تل كى ددنيا مينه مـــــــــــــــې رده
-
- 
-
-وي مړاوې مړاوې احساسونه چې ته نه وې
-
-شوراوځوږمې شي له تاسره بېــــــــــــــــــــحده
-
- 
-
-راباند ي مه خاندئ دمورغيـــــږه خوږه وي
-
-لكه ماشوم غوند ې مـــــــــــستي مې نده بده
-
- 
-
-سرداردننګ كه په نــــــــړۍ كې پيژندی شي
-
-هروړماشوم يى غيرتي دى تراســــــــــــــــــــــده
-
- 
-
-ډيرننگ اوپت پكې لوبيږى دايې ځاى دى
-
-پاكه لمنه ستاپه هرلـــــــــــــــــــــورچې خوره ده
-
- 
-
-ارمان دژوند مي دى ټاكلى هغـــــــــــــه دادى
-
-اوسم چى ستا په ښكلي غيږكى ترلـــــــــحده
-
- 
-
-تل په دعا دى (حقپــــــال) ستا سمون لپاره
-
-نورتوفيقونه چى عطـــــــــــــــــــاشي  له احده
-
-
-[[Category: پښتانه شاعران]]
-[[Category: پښتانه ليکوالان]]
+[[وېشنيزه: پښتانه شاعران]]
+[[وېشنيزه: پښتانه ليکوالان]]
