*Empty MediaWiki Message*

--- a/حامد_غورځنگ.mw
+++ b/حامد_غورځنگ.mw
@@ -1,5 +1,6 @@
 '''حامد غورځنګ''' د محمد بصير حميدي ځوۍ دۍ چې نن نه پوره ۱۹ کاله وړاندې په ۱۳۶۷ لمريز  كې  زوکړى دى نوموړى دمګړۍ ته د جلال اباد په شاه مردخان مېنه کې اوسي.
 
+== زده کړې ==
 دى ۷ کلن وو چې د ښوونځي ور يې وټکولو او په ۱۳۸۵ لمريز کال له مياعمر عالي لېسې بريالى را وواته.
 شاعري يي که څه هم لکه د پښتون کهول په خټه کې آغګلې وه خو په ۱۳۸۲ لمريز کال يې د کاغذ مخ د شعر په نوم تور کړ.
 دى د خپلې شاعرۍ لامل د يو شمېر شاعرانو د شعرونو لوستل  را په ګوته کوي او لومړنى شعر يې  په سپوږمۍ مياشتنۍ خپرونه كې خپور شوى چې د ده په وينا دا ده ده يو ارمان وو.
