--- a/عبدالروف_قتيل_خوږياڼی.mw
+++ b/عبدالروف_قتيل_خوږياڼی.mw
@@ -1,7 +1,10 @@
 ښاغلی عبدالروق قتيل خوږياڼی په ۱۳۱۳ لمريز کال کې د ننګرهار ولايت د خوږياڼيو په کږه کې زېږېدلی دی. 
 
 == زده کړې ==
-لومړنۍ زده کړې يې په خپل کلي کې ترسره کړي او بيا د لغمان د شرعيه علومو په مدرسه کې شامل شو. په ۱۳۳۰ لمريز کال کې د نوموړې مدرسې له دوولسم ټولګي څخه فارغ او د شرعياتو په پوهنځي کې چې هغه وخت د کابل پوهنتون د حقوقو پوهنځي يوه څانګه وه، شامل شو او دغه پوهنځی يې تر دويم ټولګي پورې ولوست او بيا يې د هېواد په بېلابېلو برخو کې د ښوونکي، پلټونکي او نورو څانګو کې خدمت وکړ. همداراز اوږده کلونه يې د هېواد په بېلابېلو مطبوعاتي ځانګو کې کار وکړ او د ځينو خپرونو د مسؤل مديريت په څنګ کې د ځينو ولاياتو د اطلاعاتو او کلتور آمر و. تر اوسه پورې د ښاغلي قتيل خوږياڼي زيات شمېر شعري او داستاني آثار چاپ شوي دي. 
+لومړنۍ زده کړې يې په خپل کلي کې ترسره کړي او بيا د لغمان د شرعيه علومو په مدرسه کې شامل شو. په ۱۳۳۰ لمريز کال کې د نوموړې مدرسې له دوولسم ټولګي څخه فارغ او د شرعياتو په پوهنځي کې چې هغه وخت د کابل پوهنتون د حقوقو پوهنځي يوه څانګه وه، شامل شو او دغه پوهنځی يې تر دويم ټولګي پورې ولوست. 
+
+== دندې ==
+هغه بيا د هېواد په بېلابېلو برخو کې د ښوونکي، پلټونکي او نورو څانګو کې خدمت وکړ. همداراز اوږده کلونه يې د هېواد په بېلابېلو مطبوعاتي ځانګو کې کار وکړ او د ځينو خپرونو د مسؤل مديريت په څنګ کې د ځينو ولاياتو د اطلاعاتو او کلتور آمر و. تر اوسه پورې د ښاغلي قتيل خوږياڼي زيات شمېر شعري او داستاني آثار چاپ شوي دي.
 
 == چاپ شوي آثار ==
 د ځينو خپرو شويو آثارو نومونه يې دا دي:
