/* د علامه عبدالحي حبيبي دمړيني شلمه کاليزه */

--- a/عبدالحی_حبيبي.mw
+++ b/عبدالحی_حبيبي.mw
@@ -109,6 +109,35 @@ _ د خوشحال پېژندني لومړۍ خښته دده په لاس كښېښ
 علامه حبيبي مرحوم د پښتو او پاړسي فرهنـګ دغه لاندي برخې د لومړي ځل لـه پاره پيل كړې دي :
 
 
+<br><br>
+
+ليکوال : پوهنوال رسول باوري
+
+دوې يادوني 
+
+لومړۍ ، دا ليکنه لومړۍ  په افغاني شمله نومي ټولګه کي خپره شويده ، چي د ټولو لو زيار يې ښاغلې داکتر طارق رشاد کښلۍ دۍ .
+<br><br>
+دويم :  اخځونه د تخلص پر ترتيب او هغه هم د الفبا په لومړيتوب ليکل شويدي .   
+<br><br>
+اخځونه :
+<br><br>
+۱ :   باوري ، رسول . مدنيت های اوليه افغانستان . کابل . پوهنتون کابل . ۱۳۷۵ .
+<br><br>
+۲ : پيرنيا ، حسن . تاريخ قديم ايران  . تهران  . پوهتنو ن تهران . ۱۳۴۶ .
+<br><br>
+۳ : پوري . ب . ن . هند تحت تسلط کوشانيان . مترجم ضمير ساپۍ . کابل . پوهنتون کابل . ۱۳۵۷ .
+<br><br>
+۴ : حبيبي ، عبدالحۍ . تاريخ مختصر افغانستان . کابل . مطبعه دولتي . ۱۳۴۶ .
+<br><br>
+۵ : حبيبي ، عبدالحۍ . ( برخي ايزدان کوشاني ) تحقيقات کوشاني . کابل . اکادمي علوم . ۱۳۵۹ .
+<br><br>
+۶ : چايلد ، ګوردن . سير تاريخ . مترجم : بهمنش . تهران .پوهنتون تهران .۱۳۴۶ .
+<br><br>
+۷ : ضمير ساپۍ ، حسن . تاريخ قديم افغانستان . کابل . پوهنتون کابل . ۱۳۶۳ .
+<br><br>
+۸ : د کوشاني څيړنو د شپړم سيمنار د مقالو مجموعه . کابل . علومو اکاډمي . ۱۳۶۶ .
+<br><br>
+
 
 [[وېشنيزه: پښتانه شاعران]]
 [[وېشنيزه: پښتانه ليکوالان]]
