--- a/عبدالحی_حبيبي.mw
+++ b/عبدالحی_حبيبي.mw
@@ -108,18 +108,19 @@ _ د خوشحال پېژندني لومړۍ خښته دده په لاس كښېښ
 ( د اُستاد ياد- د مقالو مجموعه- ۱۹۵مخ كابل- ۱۳۶۴ل) وايي چې علامه مرحوم تر وفات يوه ورځ مخكې يو عربي شعر په پښتو ترجمه كړ. علامه مرحوم په نړيواله سطح يو پېژندل سوى عالـم و. د يونسكو د نړيوالې موْسسې نښان يې د كور پر دروازه نصب سوى و چې دا وياړ د هېواد د بل پوه په برخه نه و.
 علامه حبيبي مرحوم د پښتو او پاړسي فرهنـګ دغه لاندي برخې د لومړي ځل لـه پاره پيل كړې دي :
 
+'''ليکوال : پوهنوال رسول باوري'''
 
-<br><br>
-
-ليکوال : پوهنوال رسول باوري
-
-دوې يادوني 
-
+== دوې يادوني ==
+ 
 لومړۍ ، دا ليکنه لومړۍ  په افغاني شمله نومي ټولګه کي خپره شويده ، چي د ټولو لو زيار يې ښاغلې داکتر طارق رشاد کښلۍ دۍ .
+
 <br><br>
-دويم :  اخځونه د تخلص پر ترتيب او هغه هم د الفبا په لومړيتوب ليکل شويدي .   
+
 <br><br>
-اخځونه :
+دويم :  سرچینې د تخلص پر ترتيب او هغه هم د الفبا په لومړيتوب ليکل شويدي .   
+<br><br>
+
+== سرچینې ==
 <br><br>
 ۱ :   باوري ، رسول . مدنيت های اوليه افغانستان . کابل . پوهنتون کابل . ۱۳۷۵ .
 <br><br>
