--- a/عبدالحی_حبيبي.mw
+++ b/عبدالحی_حبيبي.mw
@@ -11,6 +11,9 @@
 
 علا مه حبيبي د خپل پير پرمروجو بيلا بيلو علمي څانګو برلاسي درلوده ،خو د ژبپوهني ؛ ټولنپوهني ؛ادب پوهني ؛دين پوهني او تاريخ پوهني په برخو کي يې وړتيا هغه پوړيو ته رسيدلې وه چي نه يوازي د افغاني پوهانو لپاره ستره مرجع وه بلکي ټولو بهرنيوڅيړونکو ته هم د يوې ډاډمن ماخذ په توګه منل شوې وو. دهيواد د ستر مورخ په توګه د علامه حبيبي د ښه پيژندلو لار د هغو تاريخي اثارو او ليکونو لنډه ارزونه ده چي د نوموړي په زيارتاليف او تدوين شويدي ، چي په مرسته به يې د ليکلو سبک ، د څيړني ليدلورۍ او هم يې د خوښي وړ پير و پيژندلای شو .
 
+
+===لیکنې===
+
 د علا مه حبيبي څخه تر يوسل او ديرش ( ۱۳۰ ) زيات چاپ شوي کتابونه را پاته دي، په سلګونو مقالې او رسالې يې خپرې شوي او تر دوه سوه زياتو ملي اونړيوالو علمي سيمنارونو او کنفرانسونو کي يې خلاق ګډون کړيدۍ .د چاپ شويو کتابونو له جملې څخه يې د شپږ پنځوسو څخه تر شپيتو کتابونو پوري د افغانستان دتاريخ او تاريخي جغرافيې په اړه دي ، چي د بيلګي په توګه د افغانستان لنډ تاريخ ( دوه جلده ) ،افغانستان بعد از اسلام ( دوه جلده ) ، د پښتو ادبياتو تاريخ ( دوه جلده ) ، اديان عصر کوشاني ، افغانستان در عصر تيموريان ، تاريخ شاهان صفاري ،نومورکي مورخين ،جغرافيايې تاريخي افغانستان ، هنر عصر تيموريان ، تاريخ مشروطيت در افغانستان او يو زيات شمير نور يادولای شو .      
 په دې ليکنه کي يوازي د علامه حبيبي د افغانستان لنډ تاريخ په اړه اړين مطالب را يادوم :
 
