--- a/عبدالحی_حبيبي.mw
+++ b/عبدالحی_حبيبي.mw
@@ -47,9 +47,11 @@
 
 علامه حبيبي د تاريخ مختصر افغانستان په خپرولو سره په حقيقت کي د افغانستان د پنځه زره کلن تاريخ پر له پسې رښتنۍ مسير  روښانه کړ . او د پنځه زره کلن اوږد  زماني واټن  ټولي پيښي يې په خپل خلاق استعداد ګام پرګام داسي وڅيړلې او ووډلې چي له يوې خوا يې د دې ليري زماني واټن  يو ا حتی نيم کال هم پټ پرينښوداو له بلي خوا يې د هري ادعا د ثبوت لپاره مطمئن او باوري اسناد وړاندي کړل او په دې ترتيب يې د افغانستان تاريخ هويت او عظمت نړيوالو سياسي او علمي  کړيو ته جوت کړ . لنډه دا چي د علامه حبيبي ځای او مقام د افغانستان په تاريخ کي هومره اوچت دۍ لکه د يوشمير سياسي نامتو څيرو او شخصيتونو چي د افغانستان په له سره جوړښت ، ساتلو او يا وده ورکولو په اړوند  د درنښت وړدي ، که سياسيونو د افغانستان سياسي هويت ګټلۍ او ساتلۍ دۍ ، علامه پوهاند حبيبي د همدې هيواد تاريخي هويت تدوين  او ثابت کړيدۍ . 
 
-د علامه حبيبي سره زما يوه خاطره او د هيواد مورخينو ته دهغه يوه توصيه :
+==يوه خاطره او د هيواد مورخينو ته د هغه يوه توصيه===
 
-خاطره : په ۱۳۶۱  لمريز کال د کوشاني پير په اړه  پنځم  نړيوال  څيړنيز سيمنار د يونسکو په مرسته په کابل ښار کي داير شو . د سيمنار مرکزي موضوع د کوشاني امپراتورۍ سياسي سرحدونه او د هغو حدود او ثغور  ، څرګندول وه . د دسيمينار د درې  ورځنيو علمي غونډو په ترځ کي د کوشاني شاهانو د عقيدې او مذهب په اړه د برخه والو پوهانو ترمنځ مباحثه توده شوه . په سيمنار کي د نړۍ د بيلا بيلو هيوادونو نامتو پوهانو او څيړونکو ګډون درلود ، د بهرنيو پوهانو له ډلي څخه هندي  نامتو مورخ  پروفيسور ب . ن . پوري جاپاني څيړونکي پروفيسور کويا ما ، فرانسوي نامتو پوه پروفيسور فوسمن  ،د پخواني شوروي نامتو څيړونکۍ و. ي . سريانيدي  او د يوشمير نورو هيوادونو لکه تاجکستان ، ايران ، ايتاليا ، المان ، ترکيې ، انګلستان  څخه زيات شمير پوهانو  برخه  درلوده  . 
+===خاطره===
+
+په ۱۳۶۱  لمريز کال د کوشاني پير په اړه  پنځم  نړيوال  څيړنيز سيمنار د يونسکو په مرسته په کابل ښار کي داير شو . د سيمنار مرکزي موضوع د کوشاني امپراتورۍ سياسي سرحدونه او د هغو حدود او ثغور  ، څرګندول وه . د دسيمينار د درې  ورځنيو علمي غونډو په ترځ کي د کوشاني شاهانو د عقيدې او مذهب په اړه د برخه والو پوهانو ترمنځ مباحثه توده شوه . په سيمنار کي د نړۍ د بيلا بيلو هيوادونو نامتو پوهانو او څيړونکو ګډون درلود ، د بهرنيو پوهانو له ډلي څخه هندي  نامتو مورخ  پروفيسور ب . ن . پوري جاپاني څيړونکي پروفيسور کويا ما ، فرانسوي نامتو پوه پروفيسور فوسمن  ،د پخواني شوروي نامتو څيړونکۍ و. ي . سريانيدي  او د يوشمير نورو هيوادونو لکه تاجکستان ، ايران ، ايتاليا ، المان ، ترکيې ، انګلستان  څخه زيات شمير پوهانو  برخه  درلوده  . 
 
 زياتو څيړونکو او د سيمنار ګډونوالو د کوشاني پير او کوشاني پاچاهانو د مذهب او عقيدې په اړه خپله را يه څرګنده کړل ، لکه نن داسي  مي ياد دي چي علامه حبيبي ته د رايې څرګندولو نوبت ورسيدۍ ، علامه حبيبي د دې سره سره چي د سپيږيريتوب بيلګي يې په اواز او څيره کي ښکاريدې ، د کوشاني دورې د مذهبي او عقيدتي نظام او روش په اړه يې  په خپل ځانګړي   اوخلاق استدلا  هر اړخيزه مالومات  وړاندي کړل . د علامه حبيبي څرګندونو د سيمنار د برخه والو دومره پاملرنه ځان ته وګرځوله چي د حبيبي د بحث وروسته سمدلاسه ټولو برخه والو په يوه ږغ وړانديز وکړ چي د کوشاني څيړنو د راتلونکي نړيوال سيمينار عنوان دي د کوشاني پاچاهانو د مذهب او عقيدې جوتولو ته ځانګړۍ شي . همداسي وشول د سيمنار پريکړه ليک يونسکو ته د برخه والو وړانديز څرګند کړ او د يونسکو مرکزي دفتر  له لوري هم دا وړانديز ومنل شو .
 
