--- a/اوېستا.mw
+++ b/اوېستا.mw
@@ -1,7 +1,8 @@
 '''اوېستا''' د افغان فیلسوف او د څینو په اند الهي استازي (پیغمبر) زردشت د لرغونو مذهبي  شعرونو هغه ټولګه ده، چې  یوویشت [[نسک]] (کتاب) یې لرل، او په نننۍ بڼه پینڅه ځانګې لري. دا پینڅه ځانګې له [[یَسنه]] چې پدې کې د زردشت ویناوی د [[ګاهان]] په نامه راوړل شوي څا پرڅای شوي، [[یشت]]‌ (سرودونه)، [[وندیداد]]، [[ویسپرد]] او [[خرده‌اوستا]] ځخه عبارت دي.
 
 == د اوستا مانا ==
-واژه اَوِستا که در خود کتاب نیامده به معنی ''دانش و شناخت'' است و با واژه «[[ودا]]»، نام کهنترین کتابِ دینی [[هندو]]ان همریشه است. بر روی هم اوستا را می‌توان به معنی «آگاهی‌نامه» یا «دانش‌نامه» دانست كه آن را ''مرجع نامه'' نيز مينامند.
+
+د اوستا ویي خپله د اوستا په کتاب کې ندې راغلې. دا ويي د پوهې او پېژندنې په مانا دی، چې د وېدا (هندي مذهبي کتاب) له ویي سره په ریښه کې ګډ ښکاري.
 
 == تاريخچه اوستا ==
 
