--- a/اوېستا.mw
+++ b/اوېستا.mw
@@ -20,9 +20,8 @@
 * [[یشت]]ها 
 * [[خرده اوستا]].
 
-== گويش اوستا ==
-
-زباني كه اوستا به آن نوشته شده به سببِ وجودِ نامِ اوستا، [[زبان اوستايي]] ناميده شده است. اوستا به دو [[گویش]] نوشته شده‌است. گویشی که '''گاهان''' یعنی سخنان خود [[زرتشت]] بدان نوشته‌شده و گویشی که بخش‌های دیگر اوستا را بدان نوشته‌اند. گویش نخست را '''گویش گاهانی''' و گویش دوم را '''گویش جدید''' نامیده‌اند. اوستای امروزی حدود یک سوم اوستای دورهٔ [[ساسانی]] است. اوستای دورهٔ ساسانی بیست‌ویک '''نسک''' داشته است. 
+== د اوستا ژبه ==
+هغه ژبه چې اوستا پرې لیکل شوې د اوستا په نامه یادېږي. اوستا په دوه ګړدودونو لیکل شوې، یو ګړدود چې د زردشت ویناوی (ګاهان) پرې لیکل شوي او بل ګړدود نوې ګړدود نومول شوې دی. اوسمهالې اوستا یو پر درېیم د ساساني پیر اوستا جوړوي. د یادولو وړ ده چې د ساسانیانو د پیر اوېستا یوویشت نسکه (کتابونه) لرل.
 
 == اوستای کهن ==
 
