--- a/اوېستا.mw
+++ b/اوېستا.mw
@@ -33,7 +33,7 @@
 
 - بخش سوم اوستا از نظر زمانی شامل یـسـنـا، یـشـت‌های جدید، ویـسـپـرد، ونـدیـداد و خـرده اوسـتـا است كه همگی جزو اوسـتـای نـو به حساب می‌آیند. اما بسیاری از مضامین همین بخش‌های جدید نیز برگرفته و اقتباس شده از باورها و نوشتارهای كهن است؛ اما این آمیختگی به حدی است كه امكان تفكیك را امكان‌پذیر نمی‌سازد. به عنوان نمونه می‌توان از داستان جمشید در وندیداد نام برد كه یكی از كهن‌ترین داستان‌ها و باورها و نوشتارهای ایرانیان است، اما شكل نگارشی كهن آن كاملا دگرگون شده و تغییر اساسی یافته است.
 
-== منابع ==
+== سرچینې==
 *اوستا، گزارش و پژوهش جلیل دوستخواه، صفحه ۹۳۲
 *اوستای کهن (متن کامل)، گزارش و پژوهش رضا مرادی غیاث آبادی، چاپ 1382، صفحه 9 تا 12
 *کتاب [[زبان فارسی]] و سرگذشت آن،نوشتهٔ دکتر [[محسن ابوالقاسمی]]
