/* پیوند به بیرون */

--- a/اوېستا.mw
+++ b/اوېستا.mw
@@ -40,33 +40,33 @@
 
 {{reflist}}
 
-==پیوند به بیرون==
+==بهرنې تړن==
 *[http://www.aariaboom.com/content/blogsection/13/82 متن کامل اوستا]
 
 <br clear="all" />
 {| align="center" class="toccolours" 
 |- 
-! width=100% bgcolor="#ccccff" style="padding:0 0 0 50px;" align="center" |عناوین مربوط به [[مزديسنا]]
+! width=100% bgcolor="#ccccff" style="padding:0 0 0 50px;" align="center" |عناوین مربوط به [[زردشتیزم]]
 | width="70px" | [[پرونده:Faravahar.png|90px|فروهر]]
 |-
 ! colspan="2" style="text-align:center;background-color:#ddf" | 
-[[تاریخچه دین زرتشت]]
+[[د زردشتیزم پېښلیک]]
 |-
-| colspan="2" style="text-align:center" | [[زرتشت]] | [[ویشتاسب]] | [[مزداپرستی در دوره هخامنشی]] | [[مزداپرستی در دوره اشکانی]] | [[مزداپرستی در دوره ساسانی]] | [[تاریخ زرتشتیان پس از اسلام]] | [[پارسیان هند]] | [[زرتشتیان ایران]] 
+| colspan="2" style="text-align:center" | [[زردشت]] | [[ویشتاسب]] | [[زردشتيزم په هخامنشي پیر کې]] | [[زردشتیزم په اشکاني پیر کې]] | [[زردشتیزم په ساساني پیر کې]] | [[له اسلام ځخه راپیخوا د زردشتیانو پېښلیک]] | [[هندي زردشتیان]] | [[ایراني زردشتیان]] 
 <br/>
 |
 |-
 ! colspan="2" style="text-align:center;background-color:#ddf" | مفاهیم
 |-
-| colspan="2" style="text-align:center" | [[اهورامزدا]] | [[اهریمن]] | [[امشاسپندان]] | [[سوشیانت]] | [[زروان]] | [[فرجام‌شناسی زرتشتی|فرجام‌شناسی]] | [[هوم]] | [[آتش‌های مقدس زرتشتی|آتش‌های مقدس]] | [[مغ]] | [[گئوش‌اورورن]] | [[دیوهای در دین زرتشت|دیوها]] | [[اردویسور ناهید]] | [[فروهر]]
+| colspan="2" style="text-align:center" | [[اهورامزدا]] | [[اهریمن]] | [[امشاسپندان]] | [[سوشیانت]] | [[زروان]] | [[هوم]] | [[آتش‌های مقدس زرتشتی|آتش‌های مقدس]] | [[مغ]] | [[گئوش‌اورورن]] [[فروهر]]
 <br/>
 |-
-! colspan="2" style="text-align:center;background-color:#ddf" | [[فهرست مشاهیر زرتشتی|افراد مهم]]
+! colspan="2" style="text-align:center;background-color:#ddf" | [[نامتو زردشتیان|نامتو کسان]]
 |-
-| colspan="2" style="text-align:center" | [[زرتشت]] | [[ویشتاسب]] | [[کرتیر]] | [[تنسر]] | [[فهرست موبدان|موبدان]] | [[ابراهیم پورداوود]] | [[بابک خرمدین]] | [[فرهنگ مهر]] | [[منوچهرجی جاماسپ‌آسانا]] 
+| colspan="2" style="text-align:center" | [[زردشت]] | [[ویشتاسب]] | [[کرتیر]] | [[تنسر]] | [[د مذهبي لارښودانو لړلیک|لارښودان]] | [[ابراهیم پورداوود]] | [[بابک خرمدین]] 
 <br/>
 |-
-! colspan="2" style="text-align:center;background-color:#ddf" | آیین‌ها و اماکن مقدس
+! colspan="2" style="text-align:center;background-color:#ddf" | تګلارې او سپېځلي څایونه
 |-
 | colspan="2" style="text-align:center" | [[جشن‌های زرتشتی|جشن‌ها]] | [[گاهنبار]] | [[سدره‌پوشی]] | [[آیین‌های طهارت زرتشتی|آیین‌های طهارت]] | [[درون]] | [[برسم]] | [[کستی]] | [[ور]] | [[گاهشماری زرتشتی]] | [[کعبه زرتشت]] | [[فهرست آتشکده‌ها|آتشکده‌ها]] |[[استودان]] | [[برج خاموشان]] | [[چک‌چک]] 
 <br/>
