--- a/اوېستا.mw
+++ b/اوېستا.mw
@@ -78,10 +78,9 @@
 |}
 
 
-{{دینی-خرد}}
 
-[[رده:دین زرتشت]]
-[[رده:اوستا]]
+[[ویشنیزه:زردشتیزم]]
+[[ویشنیزه:اوېستا]]
 
 [[ar:الأفيستا]]
 [[az:Avesta]]
