--- a/لومړی_مخ.mw
+++ b/لومړی_مخ.mw
@@ -67,7 +67,7 @@ __NOTOC__
 {| cellpadding="2" cellspacing="5" style="vertical-align:top; background:#faf5ff; color:#000"
 ! <h2 style="margin:0; background:#ddcef2; font-size:120%; font-weight:bold; border:1px solid #afa3bf; text-align:right; color:#000; padding:0.2em 0.4em;">د نن ورځې مستند انځور</h2>
 |-
-|style="color:#000;"| {{دنن-ورځ-انځور ژغورلی/{{CURRENTYEAR}}-{{CURRENTMONTH}}-{{CURRENTDAY}}}}
+|style="color:#000;"| {{دنن-ورځ-انځور ژغورلی/{{CURRENTYEAR}}-{{CURRENTMONTH}}-{{CURRENTDAY2}}}}
 |-
 |}
 |}
