/* دا هم وګورۍ */

--- a/کابل.mw
+++ b/کابل.mw
@@ -116,6 +116,18 @@
 *د کابل نړېواله ښوونځی<ref>د کابل نړېواله ښوونځی...[http://www.qsi.org/AFG_HOME/ link]</ref>
 *[[د افغانستان د ملي پوځ اکادمي]]
 
+==Gallery==
+<gallery>
+Image:A view from Kabul InterContinental.jpg|View from Kabul InterContinental 
+Image:Downtown area of Kabul.jpg|Section of downtown area of Kabul
+Image:Kabul City during evening.JPG|Kabul City during evening time
+Image:Kabul_TV_Hill_view.jpg|View from TV-Hill
+Image:qargha panorama.jpg|Qargha lake, outside the city
+Image:Bagh-e-Bala1.jpg|Bagh-e Bala Park
+Image:qargha.jpg|Kabul Golf Park, outside the city
+Image:Darul Aman Place.png|[[Darul Aman Palace]]
+</gallery>
+
 == دا هم وګورۍ ==
 *[[کابلستان]]
 *[[د کابل د ګلف کلب]]
