--- a/کابل.mw
+++ b/کابل.mw
@@ -116,7 +116,7 @@
 *د کابل نړېواله ښوونځی<ref>د کابل نړېواله ښوونځی...[http://www.qsi.org/AFG_HOME/ link]</ref>
 *[[د افغانستان د ملي پوځ اکادمي]]
 
-==Gallery==
+==انڅوریز البوم==
 <gallery>
 Image:A view from Kabul InterContinental.jpg|View from Kabul InterContinental 
 Image:Downtown area of Kabul.jpg|Section of downtown area of Kabul
