--- a/کابل.mw
+++ b/کابل.mw
@@ -125,7 +125,7 @@ Image:Kabul_TV_Hill_view.jpg|View from TV-Hill
 Image:qargha panorama.jpg|Qargha lake, outside the city
 Image:Bagh-e-Bala1.jpg|Bagh-e Bala Park
 Image:qargha.jpg|Kabul Golf Park, outside the city
-Image:Darul Aman Place.png|[[Darul Aman Palace]]
+File:Kabul Baghe Babur.jpg
 </gallery>
 
 == دا هم وګورۍ ==
