--- a/کابل.mw
+++ b/کابل.mw
@@ -124,7 +124,7 @@ Image:Kabul City during evening.JPG|Kabul City during evening time
 Image:Kabul_TV_Hill_view.jpg|View from TV-Hill
 Image:qargha panorama.jpg|Qargha lake, outside the city
 Image:Bagh-e-Bala1.jpg|Bagh-e Bala Park
-Image:qargha.jpg|Kabul Golf Park, outside the city
+File:Downtown area of Kabul.jpg
 File:Kabul Baghe Babur.jpg
 </gallery>
 
