--- a/کابل.mw
+++ b/کابل.mw
@@ -116,12 +116,12 @@
 *د کابل نړېواله ښوونځی<ref>د کابل نړېواله ښوونځی...[http://www.qsi.org/AFG_HOME/ link]</ref>
 *[[د افغانستان د ملي پوځ اکادمي]]
 
-==انڅوریز البوم==
+==انځوریز البوم==
 <gallery>
 Image:A view from Kabul InterContinental.jpg|View from Kabul InterContinental 
 Image:Downtown area of Kabul.jpg|Section of downtown area of Kabul
 Image:Kabul City during evening.JPG|Kabul City during evening time
-Image:Kabul_TV_Hill_view.jpg|View from TV-Hill
+File:Kabul City Center.jpg
 Image:qargha panorama.jpg|Qargha lake, outside the city
 Image:Bagh-e-Bala1.jpg|Bagh-e Bala Park
 File:Downtown area of Kabul.jpg
