--- a/کابل.mw
+++ b/کابل.mw
@@ -120,7 +120,7 @@
 <gallery>
 Image:A view from Kabul InterContinental.jpg|View from Kabul InterContinental 
 Image:Downtown area of Kabul.jpg|Section of downtown area of Kabul
-File:Kabul City during evening.JPG|Kabul City during evening time
+File:Kabul City during evening.JPG
 File:Kabul City Center.jpg
 Image:qargha panorama.jpg|Qargha lake, outside the city
 Image:Bagh-e-Bala1.jpg|Bagh-e Bala Park
