--- a/کابل.mw
+++ b/کابل.mw
@@ -127,6 +127,7 @@ Image:Bagh-e-Bala1.jpg|Bagh-e Bala Park
 File:Downtown area of Kabul.jpg
 File:Kabul Baghe Babur.jpg
 File:Downtown area of Kabul.jpg
+File:Qargha panorama.jpg
 </gallery>
 
 == دا هم وګورۍ ==
