--- a/کابل.mw
+++ b/کابل.mw
@@ -127,7 +127,7 @@ Image:Bagh-e-Bala1.jpg|Bagh-e Bala Park
 File:Downtown area of Kabul.jpg
 File:Kabul Baghe Babur.jpg
 File:Downtown area of Kabul.jpg
-File:Qargha panorama.jpg
+File:Kabul City during evening.JPG
 </gallery>
 
 == دا هم وګورۍ ==
