--- a/کابل.mw
+++ b/کابل.mw
@@ -126,7 +126,7 @@ Image:qargha panorama.jpg|Qargha lake, outside the city
 Image:Bagh-e-Bala1.jpg|Bagh-e Bala Park
 File:Downtown area of Kabul.jpg
 File:Kabul Baghe Babur.jpg
-File:Downtown area of Kabul.jpg
+File:Afghan Geological Survey complex in Kabul.jpg
 File:Kabul City during evening.JPG
 </gallery>
 
