--- a/کابل.mw
+++ b/کابل.mw
@@ -124,7 +124,7 @@ File:Mountains of Kabul.jpg
 File:Kabul City Center.jpg
 Image:qargha panorama.jpg|Qargha lake, outside the city
 Image:Bagh-e-Bala1.jpg|Bagh-e Bala Park
-File:Downtown area of Kabul.jpg
+File:Serena Hotel in Kabul.jpg
 File:Kabul Baghe Babur.jpg
 File:Afghan Geological Survey complex in Kabul.jpg
 File:Kabul City during evening.JPG
