--- a/کابل.mw
+++ b/کابل.mw
@@ -128,6 +128,7 @@ File:Serena Hotel in Kabul.jpg
 File:Kabul Baghe Babur.jpg
 File:Afghan Geological Survey complex in Kabul.jpg
 File:Kabul City during evening.JPG
+File:Street in Kabul.jpg
 </gallery>
 
 == دا هم وګورۍ ==
