--- a/کابل.mw
+++ b/کابل.mw
@@ -129,6 +129,7 @@ File:Kabul Baghe Babur.jpg
 File:Afghan Geological Survey complex in Kabul.jpg
 File:Kabul City during evening.JPG
 File:Street in Kabul.jpg
+file:Kabul_City_during_evening.jpg
 </gallery>
 
 == دا هم وګورۍ ==
