--- a/کابل.mw
+++ b/کابل.mw
@@ -122,7 +122,7 @@ Image:A view from Kabul InterContinental.jpg|View from Kabul InterContinental
 Image:Downtown area of Kabul.jpg|Section of downtown area of Kabul
 File:Mountains of Kabul.jpg
 File:Kabul City Center.jpg
-Image:qargha panorama.jpg|Qargha lake, outside the city
+File:Last-stand.jpg
 Image:Bagh-e-Bala1.jpg|Bagh-e Bala Park
 File:Serena Hotel in Kabul.jpg
 File:Kabul Baghe Babur.jpg
