--- a/کابل.mw
+++ b/کابل.mw
@@ -127,7 +127,7 @@ Image:Bagh-e-Bala1.jpg|Bagh-e Bala Park
 File:Serena Hotel in Kabul.jpg
 File:Kabul Baghe Babur.jpg
 File:Afghan Geological Survey complex in Kabul.jpg
-File:Kabul City during evening.JPG
+File:Kabul during the First Anglo-Afghan War 1839-42.jpg
 File:Street in Kabul.jpg
 file:Kabul_City_during_evening.jpg
 </gallery>
