--- a/ننګرهار_ولایت.mw
+++ b/ننګرهار_ولایت.mw
@@ -79,6 +79,22 @@
 د جلالکوټ- اسمار د سړك كرېړ اچولو چارې لا پرمخ روانې دي چې په نږدې راتلونكي كې به بشپړ شي.
 
 
+==انځوریز البوم==
+<gallery>
+Image:A view from Kabul InterContinental.jpg|View from Kabul InterContinental 
+Image:Downtown area of Kabul.jpg|Section of downtown area of Kabul
+File:Mountains of Kabul.jpg
+File:Kabul City Center.jpg
+File:Last-stand.jpg
+Image:Bagh-e-Bala1.jpg|Bagh-e Bala Park
+File:Serena Hotel in Kabul.jpg
+File:Kabul Baghe Babur.jpg
+File:Afghan Geological Survey complex in Kabul.jpg
+File:Kabul during the First Anglo-Afghan War 1839-42.jpg
+File:Street in Kabul.jpg
+file:Kabul_City_during_evening.jpg
+</gallery>
+
 ==سياست==
 د ننګرهار ولايت اوسنی والي [[ګل اغا شېرزی]] دی.
 
